--- a/CodeForces/Problem/.vscode/launch.json
+++ b/CodeForces/Problem/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "g++.exe - 建置及偵錯使用中的檔案",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
+            "program": "${fileDirname}/exe/${fileBasenameNoExtension}.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
