--- a/Udemy/Deep dive into algorithm/.vscode/settings.json
+++ b/Udemy/Deep dive into algorithm/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "list": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "set": "cpp"
     }
 }
