--- a/Udemy/Deep dive into algorithm/.vscode/settings.json
+++ b/Udemy/Deep dive into algorithm/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "list": "cpp",
         "vector": "cpp",
-        "set": "cpp"
+        "set": "cpp",
+        "iostream": "cpp"
     }
 }
