--- a/CodeForces/Problem/.vscode/settings.json
+++ b/CodeForces/Problem/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "xiosbase": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "vector": "cpp",
+        "xstring": "cpp"
     }
 }
