--- a/Topic/BIT/.vscode/settings.json
+++ b/Topic/BIT/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
-  "C_Cpp_Runner.cCompilerPath": "C:/MinGW/bin/gcc.exe",
-  "C_Cpp_Runner.cppCompilerPath": "C:/MinGW/bin/g++.exe",
-  "C_Cpp_Runner.debuggerPath": "C:/MinGW/bin/gdb.exe",
+  "files.associations": {
+    "xiosbase": "cpp",
+    "ostream": "cpp",
+    "vector": "cpp",
+    "xstring": "cpp"
+  },
   "C_Cpp_Runner.warnings": [
     "-Wall",
     "-Wextra",
