--- a/Topic/BIT/.vscode/tasks.json
+++ b/Topic/BIT/.vscode/tasks.json
@@ -4,16 +4,15 @@
 		{
 			"type": "cppbuild",
 			"label": "C/C++: g++.exe 建置使用中檔案",
-			"command": "C:\\MinGW\\bin\\g++.exe",
+			"command": "C:\\Program Files\\mingw-w64\\x86_64-8.1.0-posix-seh-rt_v6-rev0\\mingw64\\bin\\g++.exe",
 			"args": [
-				"-fdiagnostics-color=always",
 				"-g",
 				"${file}",
 				"-o",
-				"${fileDirname}\\${fileBasenameNoExtension}.exe"
+				"${fileDirname}/exe/${fileBasenameNoExtension}.exe"
 			],
 			"options": {
-				"cwd": "${fileDirname}"
+				"cwd": "${workspaceFolder}"
 			},
 			"problemMatcher": [
 				"$gcc"
@@ -22,7 +21,7 @@
 				"kind": "build",
 				"isDefault": true
 			},
-			"detail": "編譯器: C:\\MinGW\\bin\\g++.exe"
+			"detail": "編譯器: \"C:\\Program Files\\mingw-w64\\x86_64-8.1.0-posix-seh-rt_v6-rev0\\mingw64\\bin\\g++.exe\""
 		}
 	]
 }
