--- a/CodeForces/Problem/.vscode/settings.json
+++ b/CodeForces/Problem/.vscode/settings.json
@@ -3,6 +3,7 @@
         "xiosbase": "cpp",
         "ostream": "cpp",
         "vector": "cpp",
-        "xstring": "cpp"
+        "xstring": "cpp",
+        "iostream": "cpp"
     }
 }
